--- a/css/featured-posts.css
+++ b/css/featured-posts.css
@@ -1,12 +1,15 @@
 /* featured-posts.css */
 .featured-posts {
-    grid-column: 1 / 5; /* Span all four columns */
-    grid-row: 3 / 4;    /* Take one row only */
+    grid-column: 1 / 5;
+    /* Span all four columns */
+    grid-row: 3 / 4;
+    /* Take one row only */
 }
 
 .featured-posts-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Changed from 2 to 4 columns */
+    grid-template-columns: repeat(4, 1fr);
+    /* Changed from 2 to 4 columns */
     grid-gap: 15px;
     margin-bottom: 20px;
 }
@@ -28,9 +31,11 @@
 
 .featured-post-img {
     width: 100%;
-    aspect-ratio: 16 / 9; /* Set a fixed aspect ratio */
+    aspect-ratio: 16 / 9;
+    /* Set a fixed aspect ratio */
     object-fit: cover;
-    object-position: center; /* Centers the focus point */
+    object-position: center;
+    /* Centers the focus point */
 }
 
 .featured-post-details {
@@ -41,23 +46,25 @@
 }
 
 .featured-post-title {
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 21px;
+    font-weight: bold;
     margin-bottom: 8px;
-    color: #4a3f35;
+    color: #3b342d;
 }
 
 .featured-post-date {
     font-size: 14px;
-    color: #6a5a4a;
+    color: #3b342d;
+    font-style: italic;
     margin-bottom: 10px;
 }
 
 .featured-post-excerpt {
-    font-size: 14px;
-    color: #6a5a4a;
+    font-size: 17px;    
+    color: #3b342d;
+    font-size: 14px;    
     line-height: 1.4;
-    display: -webkit-box;    
+    display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
