--- a/css/welcome-card.css
+++ b/css/welcome-card.css
@@ -5,16 +5,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background: linear-gradient(145deg, #d1c5bb, #f0e6dd);    height: 100%;
+    background: linear-gradient(145deg, #e2d5cc, #f0e6dd);    height: 100%;
 }
 
 .welcome-text {
     font-size: 22px;
     line-height: 1.5;
     color: #3b342d;    
+    padding-bottom: 10px;
 }
 .section-title{
-    font-size: 28px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 .learn-more-btn {
@@ -30,7 +32,7 @@
     font-size: 18px;
     transition: background-color 0.3s, transform 0.3s;
     text-decoration: none;
-    display: inline-block;    
+    display: inline-block;        
 }
 
 .learn-more-btn:hover {
