--- a/css/latest-post.css
+++ b/css/latest-post.css
@@ -10,7 +10,7 @@
 
 .latest-post-header {
     font-size: 28px;
-    font-weight: 600;
+    font-weight: bold;
     margin-bottom: 15px;
     color: #3b342d;
 }
@@ -46,7 +46,7 @@
     font-size: 24px;
     font-weight: 500;
     color: #3b342d;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .latest-post-date {
