--- a/about/responsive.css
+++ b/about/responsive.css
@@ -1,5 +1,3 @@
-/* Responsive Styles */
-
 /* Desktop to Tablet Transition (max-width: 1385px) */
 @media (max-width: 1385px) {
     header {
@@ -32,7 +30,6 @@
 
 /* Medium Screens (max-width: 1200px) */
 @media (max-width: 1200px) {
-
     #links {
         font-size: 16px;
     }
@@ -68,11 +65,13 @@
         justify-content: center;
         text-align: center;
     }
+    
     .view-all-btn {
         margin-right: 25%;
         margin-left: 25%;
     }
 }
+
 /* Mobile Screens (max-width: 768px) */
 @media (max-width: 768px) {
     header {
@@ -106,12 +105,10 @@
         border-radius: 10px;
     }
     
-     #footer {
-        display: flex;
-        justify-content: center;
-        text-align: center;
+    #cs {
+        font-size: 40px;
     }
-
+    
     .view-all-btn {
         margin-right: 0%;
         margin-left: 0%;
