--- a/css/featured-posts.css
+++ b/css/featured-posts.css
@@ -40,6 +40,7 @@
 
 .featured-post-details {
     padding: 15px;
+    padding-bottom:0 ;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -60,13 +61,13 @@
 }
 
 .featured-post-excerpt {
-    font-size: 17px;    
+    font-size: 18px;    
     color: #3b342d;
     font-size: 14px;    
     line-height: 1.4;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: hidden;    
 }
 
 .featured-posts .view-all-btn {
@@ -80,9 +81,30 @@
     font-weight: 500;
     font-size: 16px;
     transition: background-color 0.3s;
-    margin-top: 20px;
+    margin-top: 20px;    
 }
 
 .featured-posts .view-all-btn:hover {
     background-color: #5a4c3e;
+}
+
+.featured-read-more {
+    align-self: flex-end;
+    background-color: #6a5a4a;
+    color: #fff;
+    border: none;
+    padding: 8px 20px;
+    margin-bottom: 15px;
+    margin-right: 15px;
+    border-radius: 30px;
+    cursor: pointer;
+    font-family: "Kreon", serif;
+    font-weight: 500;
+    font-size: 18px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.featured-read-more:hover {
+    background-color: #5a4c3e;
+    transform: translateY(-2px);
 }
