--- a/manage/styles.css
+++ b/manage/styles.css
@@ -25,7 +25,7 @@ form {
 form h2 {
     text-align: center;
     margin-bottom: 20px;
-    color: #007BFF;
+    color: #000000;
 }
 
 label {
@@ -55,7 +55,7 @@ input:focus {
 button {
     width: 100%;
     padding: 12px;
-    background: #007BFF;
+    background: #a50f35;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -90,6 +90,47 @@ button:hover {
 .content-container {
     opacity: 1;
     transition: opacity 0.5s ease;
+}
+
+/* New elements styling */
+.dispimg {
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.disptitle {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 15px 0 10px;
+    color: #333;
+    text-align: center;
+}
+
+.dispdate {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.dispexcerpt {
+    font-size: 14px;
+    line-height: 1.4;
+    color: #555;
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
+.displink {
+    font-size: 14px;
+    color: #007BFF;
+    text-decoration: underline;
+    display: block;
+    margin-bottom: 15px;
+    word-break: break-all;
 }
 
 @media (max-width: 768px) {
